--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -234,12 +234,11 @@ jobs:
         with:
           version: 'latest'
 
-
       - name: Upload SSH Key as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ssh-key
-          path: private-key.pem
+          path: terraform/modules/compute/poc-${{ needs.set_env.outputs.env }}-key.pem
 
       - name: Download SSH Key Artifact
         uses: actions/download-artifact@v4
@@ -249,7 +248,7 @@ jobs:
 
       - name: Setup SSH access to K3s
         run: |
-          mv ~/.ssh/private-key.pem ~/.ssh/k3s-key
+          mv ~/.ssh/poc-*-key.pem ~/.ssh/k3s-key
           chmod 600 ~/.ssh/k3s-key
           CONTROL_PLANE_IP="${{ needs.terraform.outputs.control_plane_ip }}"
           cat > ~/.ssh/config << EOF
