--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -238,13 +238,15 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ssh-key
-          path: terraform/modules/compute/poc-${{ needs.set_env.outputs.env }}-key.pem
+          path: private-key.pem
+
 
       - name: Download SSH Key Artifact
         uses: actions/download-artifact@v4
         with:
           name: ssh-key
           path: ~/.ssh
+
 
       - name: Setup SSH access to K3s
         run: |
