--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -97,25 +97,21 @@ jobs:
       - name: Capture Terraform Outputs
         id: tf_outputs
         run: |
-          # Get Terraform outputs as JSON
           terraform -chdir=$TF_DIR output -json > terraform_outputs.json
-          
-          # Extract IP addresses from JSON
+
           CONTROL_PLANE_IP=$(jq -r '.ec2_public_ips.value[0]' terraform_outputs.json)
           WORKER_IP=$(jq -r '.ec2_public_ips.value[1]' terraform_outputs.json)
           CONTROL_PLANE_PRIVATE_IP=$(jq -r '.ec2_private_ips.value[0]' terraform_outputs.json)
           WORKER_PRIVATE_IP=$(jq -r '.ec2_private_ips.value[1]' terraform_outputs.json)
-          
-          # Read SSH private key safely
           SSH_PRIVATE_KEY=$(cat terraform/modules/compute/poc-pre-prod-key.pem)
-          
-          # Set environment variables
+          ECR_REPOSITORY_URL=$(jq -r '.ecr_repository_url.value' terraform_outputs.json)
+
           echo "CONTROL_PLANE_IP=$CONTROL_PLANE_IP" >> $GITHUB_ENV
           echo "WORKER_IP=$WORKER_IP" >> $GITHUB_ENV
           echo "CONTROL_PLANE_PRIVATE_IP=$CONTROL_PLANE_PRIVATE_IP" >> $GITHUB_ENV
           echo "WORKER_PRIVATE_IP=$WORKER_PRIVATE_IP" >> $GITHUB_ENV
-          
-          # Output variables for other jobs (multi-line safe for SSH key)
+          echo "ECR_REPOSITORY_URL=$ECR_REPOSITORY_URL" >> $GITHUB_ENV
+
           echo "control_plane_ip=$CONTROL_PLANE_IP" >> $GITHUB_OUTPUT
           echo "worker_ip=$WORKER_IP" >> $GITHUB_OUTPUT
           echo "control_plane_private_ip=$CONTROL_PLANE_PRIVATE_IP" >> $GITHUB_OUTPUT
@@ -123,11 +119,11 @@ jobs:
           echo "ssh_private_key<<EOF" >> $GITHUB_OUTPUT
           echo "$SSH_PRIVATE_KEY" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
-          
+          echo "ecr_repository_url=$ECR_REPOSITORY_URL" >> $GITHUB_OUTPUT
+
           echo "Control Plane IP: $CONTROL_PLANE_IP"
           echo "Worker IP: $WORKER_IP"
-
-
+          echo "ECR Repository URL: $ECR_REPOSITORY_URL"
 
 
 
