--- a/ansible/roles/k3s_control_plane/tasks/main.yml
+++ b/ansible/roles/k3s_control_plane/tasks/main.yml
@@ -1,12 +1,28 @@
+# ansible/roles/k3s_control_plane/tasks/main.yml
 ---
+- name: Create K3s config directory
+  file:
+    path: /etc/rancher/k3s
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+
+- name: Configure K3s server with custom settings
+  copy:
+    dest: /etc/rancher/k3s/config.yaml
+    content: |
+      write-kubeconfig-mode: "0644"
+      tls-san:
+        - {{ ansible_host }}
+        - {{ private_ip }}
+      bind-address: {{ private_ip }}
+      advertise-address: {{ private_ip }}
+      node-external-ip: {{ ansible_host }}
+  notify: Restart k3s
+
 - name: Install K3s server (control plane)
-  shell: |
-    curl -sfL https://get.k3s.io | sh -s - server \
-      --tls-san {{ ansible_host }} \
-      --tls-san {{ private_ip }} \
-      --bind-address {{ private_ip }} \
-      --advertise-address {{ private_ip }} \
-      --node-external-ip {{ ansible_host }}
+  shell: curl -sfL https://get.k3s.io | sh -s - server
   args:
     creates: /usr/local/bin/k3s
 
@@ -96,4 +112,4 @@
   shell: |
     kubectl patch service ingress-nginx-controller -n ingress-nginx -p '{"spec":{"type":"NodePort","ports":[{"port":80,"protocol":"TCP","targetPort":80,"nodePort":30080},{"port":443,"protocol":"TCP","targetPort":443,"nodePort":30443}]}}'
   register: ingress_patch
-  changed_when: "'patched' in ingress_patch.stdout" 
+  changed_when: "'patched' in ingress_patch.stdout"
