--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -64,10 +64,28 @@ jobs:
 
       - name: Run flake8
         run: flake8 . --show-source --statistics
+  
+  codeql:
+    name: CodeQL Analysis
+    runs-on: ubuntu-latest
+    needs: flake8
+    permissions:
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
 
   build_and_push:
     runs-on: ubuntu-latest
-    needs: flake8
+    needs: codeql
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -111,8 +129,7 @@ jobs:
     steps:
       - name: Install Trivy
         run: |
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- latest
-          sudo mv trivy /usr/local/bin/
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin latest
 
       - name: Scan flaskapp image
         run: |
