--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -15,6 +15,7 @@ env:
 
 jobs:
 
+  # 1) Run tests and coverage reporting
   test_and_coverage:
     runs-on: ubuntu-latest
     steps:
@@ -43,7 +44,8 @@ jobs:
         with:
           name: coverage-report
           path: flaskapp-database/flaskapp/htmlcov
-
+  
+  # 2) Run linting with flake8
   flake8:
     runs-on: ubuntu-latest
     needs: test_and_coverage
@@ -65,6 +67,7 @@ jobs:
       - name: Run flake8
         run: flake8 . --show-source --statistics
 
+  # 3) Run secret detection with gitleaks
   gitleaks: 
     runs-on: ubuntu-latest
     needs: flake8
@@ -78,6 +81,7 @@ jobs:
           args: detect --source . --no-git --redact --exit-code 1
         continue-on-error: true
 
+  # 4) Run CodeQL security analysis
   codeql:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
@@ -96,6 +100,7 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
+  # 5) Build and push images to Docker Hub (flaskapp + mysql)
   build_and_push:
     runs-on: ubuntu-latest
     needs: codeql
@@ -136,6 +141,7 @@ jobs:
           build-args: |
             BUILDKIT_PROGRESS=plain
 
+  # 6) Run Trivy vulnerability scan
   trivy_scan:
     runs-on: ubuntu-latest
     needs: build_and_push
