--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,6 +14,7 @@ on:
   workflow_dispatch:
 
 jobs:
+  # 1) Terraform & Ansible
   terraform:
     name: Terraform & Ansible
     runs-on: ubuntu-latest
@@ -201,6 +202,7 @@ jobs:
       worker_private_ip: ${{ steps.tf_outputs.outputs.worker_private_ip }}
       ssh_private_key: ${{ steps.tf_outputs.outputs.ssh_private_key }}
       
+  # 2) Build and Deploy Flask App to ECR
   deploy:
     name: Build and Deploy Flask App to ECR
     runs-on: ubuntu-latest
