--- a/k8s/base/pvc.yaml
+++ b/k8s/base/pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: mysql-pvc # Persistent volume claim name
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteOnce # Access mode
   resources:
     requests:
-      storage: 1Gi
+      storage: 1Gi # Storage size
