--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -2,27 +2,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mysql # Service name
   labels:
-    app: mysql
+    app: mysql # Label for the MySQL
 spec:
   selector:
-    app: mysql
+    app: mysql # Match pods with this label
   ports:
-    - port: 3306
-      targetPort: 3306
+    - port: 3306 # Service port
+      targetPort: 3306 # Target port
       protocol: TCP
-  type: ClusterIP
+  type: ClusterIP # Service type
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flaskapp-service
+  name: flaskapp-service # Service name
 spec:
   selector:
-    app: flaskapp
+    app: flaskapp # Match pods with this label
   ports:
-    - protocol: TCP
+    - protocol: TCP # Protocol
       port: 80        # service port (what ingress sees)
       targetPort: 5002 # container port (your Flask app)
 
