--- a/k8s/overlays/testing/flask-deploy-patch.yaml
+++ b/k8s/overlays/testing/flask-deploy-patch.yaml
@@ -28,8 +28,8 @@ spec:
         - name: mysql # Container name
           resources:
             requests:
-              cpu: "100m"
-              memory: "256Mi"
+              cpu: "250m"
+              memory: "512Mi"
             limits:
-              cpu: "200m"
-              memory: "256Mi"
+              cpu: "500m"
+              memory: "1Gi"
