--- a/k8s/overlays/testing/kustomization.yaml
+++ b/k8s/overlays/testing/kustomization.yaml
@@ -5,10 +5,10 @@ resources:
 images:
   - name: yehiashaikhoun/flaskapp # Flask app image
     newName: yehiashaikhoun/flaskapp # New name
-    newTag: d76653ba0164d36c827c4416dbaf28e524a32e73 # New tag
+    newTag: latest # New tag
   - name: yehiashaikhoun/mysql # MySQL image
     newName: yehiashaikhoun/mysql # New name
-    newTag: mysql-latest # New tag
+    newTag: latest # New tag
 
 patches:
   - path: flask-deploy-patch.yaml # Flask deployment patch
