adding debugging steps to the pipeline 3

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -351,14 +351,33 @@ jobs:
           # Update image references to use ECR
           ECR_REPO="${{ needs.terraform.outputs.ecr_repository_url }}"
           
-          # Update Flask image
-          sed -i "s|yehiashaikhoun/flaskapp:latest|$ECR_REPO:${{ env.IMAGE_TAG }}|g" k8s/overlays/testing/kustomization.yaml
+          echo "ECR Repository: $ECR_REPO"
+          echo "Image Tag: ${{ env.IMAGE_TAG }}"
           
-          # Update MySQL image
-          sed -i "s|yehiashaikhoun/mysql:latest|$ECR_REPO:mysql-${{ env.IMAGE_TAG }}|g" k8s/overlays/testing/kustomization.yaml
+          # Update kustomization.yaml with ECR images
+          cat > k8s/overlays/testing/kustomization.yaml << EOF
+          # k8s/overlays/testing/kustomization.yaml
+          resources:
+            - ../../base
+
+          images:
+            - name: yehiashaikhoun/flaskapp # Flask app image
+              newName: $ECR_REPO # ECR repository URL
+              newTag: ${{ env.IMAGE_TAG }} # New tag
+            - name: yehiashaikhoun/mysql # MySQL image
+              newName: $ECR_REPO # ECR repository URL
+              newTag: mysql-${{ env.IMAGE_TAG }} # New tag
+
+          patches:
+            - path: flask-deploy-patch.yaml # Flask deployment patch
+            - path: ingress-patch.yaml # Ingress patch
+          EOF
           
           # Update ingress IP
           sed -i "s|CONTROL_PLANE_IP|${{ needs.terraform.outputs.control_plane_ip }}|g" k8s/overlays/testing/ingress-patch.yaml
+          
+          echo "Updated kustomization.yaml:"
+          cat k8s/overlays/testing/kustomization.yaml
 
           ls -R k8s/overlays/testing/
 
